RESOLVED FIXED22520
REGRESSION(r38768?): Two animation tests crashing on buildbot
https://bugs.webkit.org/show_bug.cgi?id=22520
Summary REGRESSION(r38768?): Two animation tests crashing on buildbot
Mark Rowe (bdash)
Reported 2008-11-26 16:25:36 PST
Attachments
Disable the transform-animation-event-destroy-element while the animation lifetime issue is being investigated. (4.33 KB, patch)
2008-12-01 18:21 PST, David Levin
no flags
Patch to fix bug (1.93 KB, patch)
2008-12-02 10:53 PST, Chris Marrin
hyatt: review+
Mark Rowe (bdash)
Comment 1 2008-11-26 16:27:39 PST
Leopard is showing a different test crashing on <http://build.webkit.org/results/trunk-mac-intel-pixel/568/results.html>.
Chris Marrin
Comment 2 2008-12-01 15:06:41 PST
All these bugs are fixed by the patches for 22046 and 22052
Simon Fraser (smfr)
Comment 3 2008-12-01 17:46:10 PST
This test is still crashing on the bot: <http://build.webkit.org/builders/trunk-mac-intel-pixel/builds/647/steps/pixel-layout-test/logs/stdio> animations/transform-animation-event-destroy-element.html -> crashed
Simon Fraser (smfr)
Comment 4 2008-12-01 17:52:21 PST
Debug builds assert: (/Volumes/InternalData/Development/webkit/WebKit.git/JavaScriptCore/wtf/ThreadingPthreads.cpp:205 void WTF::Mutex::lock())
David Levin
Comment 5 2008-12-01 18:21:16 PST
Created attachment 25649 [details] Disable the transform-animation-event-destroy-element while the animation lifetime issue is being investigated.
Alexey Proskuryakov
Comment 6 2008-12-02 01:14:18 PST
For me, the crash reproduces on Tiger/PPC, but not on Leopard/Intel. Looks like an animation lifetime issue indeed, and not something directly related to mutex locking.
Chris Marrin
Comment 7 2008-12-02 10:53:46 PST
Created attachment 25675 [details] Patch to fix bug Sorry, I should not have closed this. The other two patches are needed for this fix, but it needs one more thing, which is included in this patch.
Dave Hyatt
Comment 8 2008-12-03 11:24:31 PST
Comment on attachment 25675 [details] Patch to fix bug r=me
Chris Marrin
Comment 9 2008-12-03 14:21:28 PST
Sending WebCore/ChangeLog Sending WebCore/page/animation/AnimationBase.cpp Transmitting file data .. Committed revision 38968.
Note You need to log in before you can comment on or make changes to this bug.